user lab progres statistics
